--- a/Samples/VecAdd/VecAdd.csproj
+++ b/Samples/VecAdd/VecAdd.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
