Add vec add compute sample

--- a/Samples/VecAdd/VecAdd.csproj
+++ b/Samples/VecAdd/VecAdd.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VecAddApp.cs" />
+    <Compile Include="FrameResource.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
