Add blur compute sample (WIP)

--- a/Samples/Blend/Blend.csproj
+++ b/Samples/Blend/Blend.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlurFilter.cs" />
     <Compile Include="FrameResource.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
