--- a/Samples/Blur/Blur.csproj
+++ b/Samples/Blur/Blur.csproj
@@ -58,8 +58,12 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlurApp.cs" />
+    <Compile Include="FrameResource.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderItem.cs" />
+    <Compile Include="Waves.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
