--- a/Samples/CubeMap/CubeMap.csproj
+++ b/Samples/CubeMap/CubeMap.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FDF80094-B8EF-4A18-8846-785D7AAC3FF7}</ProjectGuid>
+    <ProjectGuid>{5D5DB9D8-A564-4D74-AF19-FB291DAE7F11}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DX12GameProgramming</RootNamespace>
-    <AssemblyName>CameraAndDynamicIndexing</AssemblyName>
+    <AssemblyName>CubeMap</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -59,11 +59,11 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CubeMapApp.cs" />
     <Compile Include="FrameResource.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RenderItem.cs" />
-    <Compile Include="CameraAndDynamicIndexingApp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -76,20 +76,27 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\Textures\bricks.dds">
-      <Link>Textures\bricks.dds</Link>
+    <Content Include="..\..\Models\Skull.txt">
+      <Link>Models\Skull.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\..\Textures\stone.dds">
-      <Link>Textures\stone.dds</Link>
+    <Content Include="..\..\Textures\bricks2.dds">
+      <Link>Textures\bricks2.dds</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\..\Textures\grasscube1024.dds">
+      <Link>Textures\grasscube1024.dds</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\..\Textures\tile.dds">
       <Link>Textures\tile.dds</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\..\Textures\WoodCrate01.dds">
-      <Link>Textures\WoodCrate01.dds</Link>
+    <Content Include="..\..\Textures\white1x1.dds">
+      <Link>Textures\white1x1.dds</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\Common.hlsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Shaders\Default.hlsl">
@@ -98,7 +105,11 @@
     <Content Include="Shaders\LightingUtil.hlsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Shaders\Sky.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
