--- a/Samples/DynamicCube/DynamicCube.csproj
+++ b/Samples/DynamicCube/DynamicCube.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FDF80094-B8EF-4A18-8846-785D7AAC3FF7}</ProjectGuid>
+    <ProjectGuid>{CECE954C-9008-46CB-9B75-7B04AF63E48F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DX12GameProgramming</RootNamespace>
-    <AssemblyName>CameraAndDynamicIndexing</AssemblyName>
+    <AssemblyName>DynamicCube</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -59,11 +59,8 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FrameResource.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RenderItem.cs" />
-    <Compile Include="CameraAndDynamicIndexingApp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -74,30 +71,6 @@
       <Project>{76eb2d81-f8a4-4263-8d7b-bd72fb965926}</Project>
       <Name>Common</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="..\..\Textures\bricks.dds">
-      <Link>Textures\bricks.dds</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\Textures\stone.dds">
-      <Link>Textures\stone.dds</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\Textures\tile.dds">
-      <Link>Textures\tile.dds</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\Textures\WoodCrate01.dds">
-      <Link>Textures\WoodCrate01.dds</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Shaders\Default.hlsl">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Shaders\LightingUtil.hlsl">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
