--- a/Samples/Ssao/Ssao.csproj
+++ b/Samples/Ssao/Ssao.csproj
@@ -69,6 +69,34 @@
     <Compile Include="SsaoApp.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\Textures\bricks2.dds">
+      <Link>Textures\bricks2.dds</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\..\Textures\bricks2_nmap.dds">
+      <Link>Textures\bricks2_nmap.dds</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\..\Textures\default_nmap.dds">
+      <Link>Textures\default_nmap.dds</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\..\Textures\sunsetcube1024.dds">
+      <Link>Textures\sunsetcube1024.dds</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\..\Textures\tile.dds">
+      <Link>Textures\tile.dds</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\..\Textures\tile_nmap.dds">
+      <Link>Textures\tile_nmap.dds</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\..\Textures\white1x1.dds">
+      <Link>Textures\white1x1.dds</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
@@ -81,20 +109,37 @@
   <ItemGroup>
     <Content Include="..\..\Models\Skull.txt">
       <Link>Models\Skull.txt</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Shaders\Common.hlsl" />
-    <Content Include="Shaders\Default.hlsl" />
-    <Content Include="Shaders\DrawNormals.hlsl" />
-    <Content Include="Shaders\LightingUtil.hlsl" />
-    <Content Include="Shaders\ShadowDebug.hlsl" />
-    <Content Include="Shaders\Shadows.hlsl" />
-    <Content Include="Shaders\Sky.hlsl" />
-    <Content Include="Shaders\Ssao.hlsl" />
-    <Content Include="Shaders\SsaoBlur.hlsl" />
+    <Content Include="Shaders\Common.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\Default.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\DrawNormals.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\LightingUtil.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\ShadowDebug.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\Shadows.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\Sky.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\Ssao.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\SsaoBlur.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Textures\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
