--- a/Samples/Quaternions/Quaternions.csproj
+++ b/Samples/Quaternions/Quaternions.csproj
@@ -58,8 +58,12 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnimationHelper.cs" />
+    <Compile Include="QuaternionsApp.cs" />
+    <Compile Include="FrameResource.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Textures\bricks2.dds">
