--- a/Samples/SkinnedMesh/SkinnedMesh.csproj
+++ b/Samples/SkinnedMesh/SkinnedMesh.csproj
@@ -58,8 +58,15 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoadM3d.cs" />
+    <Compile Include="SkinnedData.cs" />
+    <Compile Include="FrameResource.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderItem.cs" />
+    <Compile Include="ShadowMap.cs" />
+    <Compile Include="Ssao.cs" />
+    <Compile Include="SkinnedMeshApp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Models\soldier.m3d">
