Finish ssao and skinned mesh samples

--- a/Samples/LitWaves/08-LitWaves.csproj
+++ b/Samples/LitWaves/08-LitWaves.csproj
@@ -33,6 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
